# Laboratorio

./: .gitignore  Book.cpp  Book.h  CMakeCache.txt  CMakeLists.txt  Date.cpp  Date.h  DateControl.cpp  DateControl.h  Makefile  README.txt  a.out  cmake_install.cmake  control.h  controlISBN.cpp  controlISBN.h  controlISBN.hpp  dateTest.cpp  hello.cpp  isbn.h  main.cpp  progetto
include/: Book.h  DateControl.h  controlISBN.h
src/: Book.cpp  controlISBN.cpp  dateTest.cpp  main.cpp
